@@ -285,7 +285,7 @@ a:hover {
 	margin: 5px 0 0 20px;
 }
 
-#home_contents {
+.info {
     width: 600px;
     padding: 20px;
     margin: 25px auto;
