@@ -59,12 +59,9 @@
 
         <!--Template Definitions-->
         <script id="homeView" type="text/html">
-            <div id="home_contents" class="ui-widget ui-widget-content ui-corner-all">
+            <div id="home_contents" class="info ui-widget ui-widget-content ui-corner-all">
                 <p>
                     Welcome to <strong>search.metacpan.org</strong>
-                </p>
-                <p>
-                    <em>New updates will appear in the New Year, including more information on the Distribution page (links to cpan tester, dependencies etc) and an Author search results page where instead of requiring the Author's exact puaseid, a result list based on pauseid and name will be shown. And possibly another tidbit or two.</em>
                 </p>
                 <p>
                     This site is a front-end for <a href="http://api.metacpan.org" title="The CPAN-API">api.metacpan.org</a>.
@@ -79,6 +76,7 @@
                     If you find any problems with the site or you have any comments or suggestions please feel free to contact us on our <a href="http://groups.google.com/group/cpan-api" target="_blank">Google Group mailing list</a> or even better by adding an item directly to the <a href="https://github.com/CPAN-API/search-metacpan-org/issues">Github issue tracker</a>.
                 </p>
             </div>
+            <div id="changes" class="info ui-widget ui-widget-content ui-corner-all" style="white-space: pre;"></div>
             <div class="spacer">&nbsp;</div>
         </script>
         <script id="resultsTable" type="text/html">
