@@ -1,8 +1,9 @@
+CHANGE LOG
+
 2011-01-09
 
 * added a change log to the homepage
-* added links to CPAN Testers and Dependencies to
-  the dist details page
+* added links to CPAN Testers and Dependencies to the dist details page
 * added dist description to the dist details page
 
 2011-01-07
